# pouch

examples/ble_gatt/: CMakeLists.txt  app.overlay  pm_static.yml  prj.conf
examples/ble_gatt/boards/: xiao_ble.overlay
examples/ble_gatt/src/: main.c
examples/ble_gatt/src/sensors/: ph_sensor.c  ph_sensor.h  sensor.h  sensors.c  solar_sensor.c  solar_sensor.h  temp_sensor.c  temp_sensor.h  water_sensor.c  water_sensor.h
